tests/golden/6-numeric-literals-and-notations/invalid/common/bad-integer-leading-zero-literal-1.yini
^ BadInteger
badInt = 0123     # NOT a valid integer literal
